--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,20 @@
 theme: jekyll-theme-minimal
 title: "nauleyco"
+author:
+  name: "Noriko YAMAMOTO"
+  avatar: "/assets/images/icon.jpg"
+  bio: "I am an amazing person."
+  location: "Tokyo JAPAN"
+  links:
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://twitter.com/nauleyco"
+    - label: "Facebook"
+      icon: "fab fa-fw fa-instagram"
+      url: "https://www.facebook.com/nauleyco"
+    - label: "Flickr"
+      icon: "fab fa-fw fa-instagram"
+      url: "https://www.flickr.com/people/lllnorikolll-300er/"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/nauleyco"
