--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,5 @@ description: "@nauleyco<br>
 I am a PHP developer. <br>
 i ℒℴѵℯ php ♡ i ℒℴѵℯ boeing ♡. <br>
 I am a member of JAPAN PHP User Group. <br>
-Please join us!<br>
-<a data-flickr-embed=\"true\" data-header=\"true\" data-footer=\"true\"  href=\"https://www.flickr.com/photos/lllnorikolll-300er/albums/72157668778865336\" title=\"exhibition\"><img src=\"https://farm6.staticflickr.com/5721/22430591885_11d7c5bb3a_t.jpg\" width=\"100\" height=\"67\" alt=\"exhibition\"></a><script async src=\"//embedr.flickr.com/assets/client-code.js\" charset=\"utf-8\"></script>
-"
+Please join us!"
 logo: "/assets/images/icon.jpg"
